RESOLVED FIXED24608
Missing include in KURLGoogle.cpp
https://bugs.webkit.org/show_bug.cgi?id=24608
Summary Missing include in KURLGoogle.cpp
Craig Schlenter
Reported 2009-03-15 09:01:28 PDT
KURLGoogle.cpp uses printf when #ifndef NDEBUG is true which in turn means that stdio.h should be included in that situation. Found with gcc 4.4.0 I'll attach a patch.
Attachments
patch to add missing include (862 bytes, patch)
2009-03-15 09:03 PDT, Craig Schlenter
dglazkov: review+
Craig Schlenter
Comment 1 2009-03-15 09:03:18 PDT
Created attachment 28636 [details] patch to add missing include Only tested on linux with chromium.
Dimitri Glazkov (Google)
Comment 2 2009-03-20 14:26:11 PDT
Comment on attachment 28636 [details] patch to add missing include Don't forget to add a link to bug on ChangeLog entry when landing.
David Levin
Comment 3 2009-03-20 15:54:28 PDT
Please include a link to the bug in the changelog in the future. Assigned to levin for landing.
David Levin
Comment 4 2009-03-20 16:57:35 PDT
Committed as r41881.
Note You need to log in before you can comment on or make changes to this bug.